--- a/package.json
+++ b/package.json
@@ -7,10 +7,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "contentful": "^7.14.0",
+    "deep-extend": "^0.6.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-image-gallery": "^1.0.6",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.4.0"
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.13.1"
   }
 }
